@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-08-17T08:07:12Z",
+  "count" : 120,
+  "count_minmax" : [ 120, 120 ],
+  "count_decinc" : [ -0, +120 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +1 ]
+}
