@@ -1,10 +1,10 @@
 {
-  "count": 4502,
+  "count": 4551,
   "uniques": 77,
   "clones": [
     {
       "timestamp": "2022-08-03T00:00:00Z",
-      "count": 167,
+      "count": 94,
       "uniques": 2
     },
     {
@@ -69,8 +69,13 @@
     },
     {
       "timestamp": "2022-08-16T00:00:00Z",
-      "count": 365,
+      "count": 367,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-08-17T00:00:00Z",
+      "count": 120,
+      "uniques": 1
     }
   ]
 }
